# task5cpp

./: Ad_Str.h  AppendBroadcast.cpp  AppendBroadcast.h  Broadcast_Str.h  Broadcast_ad_Str.h  CMakeLists.txt  Channels_Str.h  Create_broadcast_structure.cpp  Create_broadcast_structure.h  Create_channels.cpp  Create_channels.h  Create_total_structure.cpp  Create_total_structure.h  Gen_add_parameter.cpp  Gen_add_parameter.h  Print_broadcast.cpp  Print_broadcast.h  README.MD  Write_broadcast.cpp  Write_broadcast.h  ads.txt  channels.txt  main.cpp
