cmake_minimum_required(VERSION 3.22)
project(task5cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(task5cpp main.cpp Broadcast_ad_Str.h Broadcast_Str.h Ad_Str.h Channels_Str.h Generator_Str.h Create_channels.h Create_channels.cpp Create_total_structure.h Create_total_structure.cpp Gen_add_parameter.h Gen_add_parameter.cpp AppendBroadcast.h AppendBroadcast.cpp Print_broadcast.h Print_broadcast.cpp Create_broadcast_structure.h Create_broadcast_structure.cpp Write_broadcast.h Write_broadcast.cpp)